# secunda-backend

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
src/: config.py  main.py
src/api/: __init__.py  listings.py
src/core/: auth.py  bittree.py  logger.py
src/cruds/: __init__.py  actions_crud.py  activities_crud.py  base.py  buildings_crud.py  organizations_crud.py
src/data/: factories.py
src/db/: __init__.py  base.py  models.py
src/db/alembic/: env.py  script.py.mako
src/db/alembic/versions/: 0bdab1639386_c_simplified_organization_storage.py  5d9aca844a32_tables_activities_buildings_.py  b99b880c3395_column_activity_tree_for_better_org_.py
