[tool.poetry]
name = "secunda-backend"
version = "0.1.0"
description = ""
authors = ["TJesT <alexeynospid@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.42"
pydantic = "^2.11.7"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
alembic = "^1.16.4"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
colorlog = "^6.9.0"
geoalchemy2 = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
